# spln-2223

./: README.md
TP1/: README.md  SPLN TP1.pptx  askGPT.py  config
TP2/: .gitignore  README.md
TP2/mkfstree/: LICENSE  README.md  pyproject.toml
TP2/mkfstree/mkfstree/: __init__.py  a.py  build_fstree.py  directory_structure.py  interpreter.py  mkfstree.py  mktemplateskel.py  myparser.py  utils.py
TP2/tests/: teste.txt
TPC1/: README.md  med.py  med_para_TPC2.py  medicina.json
TPC2/: .gitignore  README.md  med_lex.py  med_yacc.py  parsetab.py  teste.txt
TPC3/: README.md  convert_med_json.py  medicina_teste.json
TPC4/: README.md  harry.txt  teste.txt  tokenizadorspln.py
TPC4/tokenizadorspln/: ola.txt  pyproject.toml
TPC4/tokenizadorspln/conf/: cap.txt
TPC4/tokenizadorspln/tokenizadorspln/: __init__.py
TPC4/tokenizadorspln/tokenizadorspln/conf/: abrev.txt
TPC5/: README.md  ja-corpus.py  ja-text.py  ja.json
TPC6/: README.md  criar_modelo.py  ja.txt  similar.txt  test.py  val.txt
TPC6/PT/: J.K.Rowling-5-Harry_Potter_e_a_Ordem_da_Fenix.txt  J.K.Rowling-7-Harry_Potter_e_As_Reliquias_da_Morte.txt
TPC7/: README.md  output.txt
TPC7/getLinkTables/: pyproject.toml
TPC7/getLinkTables/getLinkTables/: __init__.py  getLinks.py  getTables.py  get_links.py  get_tables.py
medicina/: med.py  medicinaTeste.txt
