[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mkfstree"
authors = [{name = "brunorscampos", email = "brunitocampos@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = []
readme = "README.md"

[project.scripts]
mkfstree = "mkfstree:mkfstree"
mktemplateskel = "mkfstree:mktemplateskel"