[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "getLinkTables"
authors = [{name = "brunorscampos", email = "brunitocampos@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["bs4"]
readme = "README.md"

[project.scripts]
getLinks = "getLinkTables:getLinks"
getTables = "getLinkTables:getTables"